# sfcollection

./: .gitignore  .gitmodules  README.md
asm/: main.cc
comp/: .gitignore  Makefile  README.md  helpers.c  helpers.h  sfcc.c
comp/ds/: token.c  token.h
comp/frontend/: lexer.c  lexer.h  main.cc
comp/src/: main.cc
comp/src/ds/: pptoken.cc  pptoken.hh  token.cc  token.hh
comp/src/frontend/: lexer.cc  lexer.hh  parser.hh
comp/src/include/: assert.h
comp/src/preproccessor/: ppcontext.hh  pplexer.hh  preprocessor.hh
demo/: InitSNES.asm  header.asm
sfas/: .gitignore  CMakeLists.txt  Makefile  README.md  config.hh  config.hh.in  main.cc  sfas
sfas/src/: instruction.cc  instruction.hh  lexer.cc  lexer.hh  location.cc  location.hh  parser.cc  parser.hh  sfas.cc  sfas.hh  token.cc  token.hh
sfas/tests/: CMakeLists.txt  config.hh.in  main.cc  test00002.s  test00004.s
sfas/tests/lexer-tests/: lexer-tests.cc
sfasm/tests/: test.s
sfcc/: .gitignore  README.md
sfcc/src/: main.cc
sfcc/src/ds/: token.cc  token.hh
sfcc/src/frontend/: lexer.cc  lexer.hh
sfcc/src/libc/: __assert.c
